--- a/GE.WebUI/Views/web.config
+++ b/GE.WebUI/Views/web.config
@@ -19,6 +19,7 @@
         <!---->
         <add namespace="GE.WebCoreExtantions"/>
         <add namespace="GE.WebUI.Models" />
+        <add namespace="SX.WebCore.HtmlHelpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
