--- a/GE.WebAdmin/Web.config
+++ b/GE.WebAdmin/Web.config
@@ -16,6 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--custom-->
+    <add key="siteName" value="game-exe.com"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
