--- a/GE.WebAdmin/GE.WebAdmin.csproj
+++ b/GE.WebAdmin/GE.WebAdmin.csproj
@@ -3219,6 +3219,7 @@
     <Compile Include="Controllers\ArticleTypesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RouteValuesController.cs" />
+    <Compile Include="Controllers\SeoController.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="Extantions\Repositories\RepoArticleType.cs" />
     <Compile Include="GamesController.generated.cs">
@@ -3237,6 +3238,7 @@
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\VMEditNews.cs" />
+    <Compile Include="Models\VMEditSeoInfo.cs" />
     <Compile Include="Models\VMNews.cs" />
     <Compile Include="Models\VMArticleType.cs" />
     <Compile Include="Models\VMArticle.cs" />
@@ -3257,6 +3259,7 @@
     <Compile Include="Models\VMRoute.cs" />
     <Compile Include="Models\VMRouteValue.cs" />
     <Compile Include="Models\VMRouteValueList.cs" />
+    <Compile Include="Models\VMSeoInfo.cs" />
     <Compile Include="Models\VMSiteSettings.cs" />
     <Compile Include="NewsController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
@@ -3279,6 +3282,9 @@
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="RouteValuesController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SeoController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="SettingsController.generated.cs">
@@ -3335,6 +3341,9 @@
     <Content Include="Views\Games\FindTable.cshtml" />
     <Content Include="Views\ArticleTypes\_ArticleTypesByGameId.cshtml" />
     <Content Include="Views\Settings\EditSite.cshtml" />
+    <Content Include="Views\Seo\Index.cshtml" />
+    <Content Include="Views\Seo\_GridView.cshtml" />
+    <Content Include="Views\Seo\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
