--- a/GE.WebUI/bower.json
+++ b/GE.WebUI/bower.json
@@ -22,5 +22,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "3.3.6",    "font-awesome": "4.5.0"  }
+    "bootstrap": "3.3.6",
+    "font-awesome": "4.5.0",
+    "jquery-hoverIntent": "1.8.1"
+  }
 }
