--- a/GE.Tests/GE.Tests.csproj
+++ b/GE.Tests/GE.Tests.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="GRUD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
