--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -417,11 +417,12 @@
     <Content Include="Content\less\positioned.less" />
     <Content Include="Content\less\for-gamers-block.less" />
     <Content Include="Content\less\footer.less" />
-    <Content Include="Content\less\mat-info.less" />
     <Content Include="Content\less\sx-list.less" />
     <Content Include="Content\less\list-article.less" />
     <Content Include="Content\less\sx-pager.less" />
     <Content Include="Content\less\list-news.less" />
+    <Content Include="Content\less\material.less" />
+    <Content Include="Content\less\article.less" />
     <None Include="Properties\PublishProfiles\game-exe.pubxml" />
     <None Include="T4MVC.tt.hooks.t4" />
     <None Include="T4MVC.tt">
@@ -469,6 +470,7 @@
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SiteSeoInfo.cs" />
+    <Compile Include="Models\VMBreadcrumb.cs" />
     <Compile Include="Models\VMMateriallnfo.cs" />
     <Compile Include="Models\VMFGBlock.cs" />
     <Compile Include="Models\VMGameMenu .cs" />
@@ -525,6 +527,9 @@
     <Content Include="Views\Articles\DisplayTemplates\Article.cshtml" />
     <Content Include="Views\News\_Collection.cshtml" />
     <Content Include="Views\News\DisplayTemplates\News.cshtml" />
+    <Content Include="Views\Articles\Details.cshtml" />
+    <Content Include="Views\News\Details.cshtml" />
+    <Content Include="Views\Shared\_Breadcrumbs.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
