--- a/GE.WebUI/bower.json
+++ b/GE.WebUI/bower.json
@@ -22,5 +22,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "3.3.6",    "font-awesome": "4.5.0"  }
+    "bootstrap": "3.3.6",
+    "font-awesome": "4.5.0"
+  }
 }
