--- a/GE.WebUI/Web.config
+++ b/GE.WebUI/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Server=tcp:fc6iu7ju6s.database.windows.net,1433;Database=game-exe.com;User ID=simlex@fc6iu7ju6s;Password=Luia121212;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
+    <!--<add name="DbContext" providerName="System.Data.SqlClient" connectionString="Server=tcp:fc6iu7ju6s.database.windows.net,1433;Database=game-exe.com;User ID=simlex@fc6iu7ju6s;Password=Luia121212;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />-->
+    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Server=37.140.192.61;Database=u0103269_gameexecom;User ID=u0103269_developer;Password=Luia124445#;Connection Timeout=30;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -24,6 +25,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <staticContent>
