--- a/GE.WebAdmin/GE.WebAdmin.csproj
+++ b/GE.WebAdmin/GE.WebAdmin.csproj
@@ -3016,6 +3016,7 @@
     <Content Include="Content\dist\js\site.min.js" />
     <Content Include="Content\sx\js\sx-find-table.js" />
     <Content Include="Content\sx\js\sx-grid-view.js" />
+    <Content Include="faveicon.png" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="gulpfile.js" />
@@ -3105,10 +3106,6 @@
     <Content Include="bower_components\ckeditor\skins\moono\readme.md" />
     <Content Include="Content\sx\less\sx-find-table.less" />
     <Content Include="robots.txt" />
-    <Content Include="T4MVC.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>T4MVC.cs</LastGenOutput>
-    </Content>
     <Content Include="bower_components\metisMenu\.bower.json" />
     <Content Include="bower_components\metisMenu\bower.json" />
     <Content Include="bower_components\metisMenu\LICENSE" />
@@ -3224,6 +3221,10 @@
     <None Include="T4MVC.tt.settings.xml" />
     <Content Include="Scripts\routes.js" />
     <Content Include="Scripts\menues.js" />
+    <Content Include="T4MVC.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>T4MVC.cs</LastGenOutput>
+    </Content>
     <Content Include="Views\Menues\Edit.cshtml" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -3235,10 +3236,13 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="ArticlesController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="ArticleTypesController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Controllers\RedirectsController.cs" />
     <Compile Include="Controllers\RequestController.cs" />
     <Compile Include="Controllers\SeoKeywordsController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
@@ -3257,22 +3261,28 @@
     <Compile Include="Extantions\Repositories\RepoArticleType.cs" />
     <Compile Include="GamesController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="HomeController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="MenuesController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="MenuItemsController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\VMEditSeoKeyword.cs" />
     <Compile Include="Models\VMEditNews.cs" />
     <Compile Include="Models\VMEditSeoInfo.cs" />
+    <Compile Include="Models\VMEditRedirect.cs" />
+    <Compile Include="Models\VMRedirect.cs" />
     <Compile Include="Models\VMRequest.cs" />
     <Compile Include="Models\VMSeoKeywordList.cs" />
     <Compile Include="Models\VMNews.cs" />
@@ -3300,13 +3310,20 @@
     <Compile Include="Models\VMSiteSettings.cs" />
     <Compile Include="NewsController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="PicturesController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedirectsController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="RequestController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="Resources\Constants.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -3320,24 +3337,31 @@
     </Compile>
     <Compile Include="RoutesController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="RouteValuesController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="SeoInfoController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="SeoKeywordsController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="SettingsController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="SharedController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="T4MVC.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
+      <SubType>Code</SubType>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
@@ -3391,6 +3415,9 @@
     <Content Include="Views\SeoKeywords\Edit.cshtml" />
     <Content Include="Views\Request\Index.cshtml" />
     <Content Include="Views\Request\_GridView.cshtml" />
+    <Content Include="Views\Redirects\_GridView.cshtml" />
+    <Content Include="Views\Redirects\Index.cshtml" />
+    <Content Include="Views\Redirects\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
