--- a/GE.WebCoreExtantions/GE.WebCoreExtantions.csproj
+++ b/GE.WebCoreExtantions/GE.WebCoreExtantions.csproj
@@ -65,6 +65,7 @@
     <Compile Include="DbContext.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\RepoRedirect.cs" />
     <Compile Include="Repositories\RepoSeoKeywords.cs" />
     <Compile Include="Repositories\RepoSeoInfo.cs" />
     <Compile Include="Repositories\RepoSiteSetting.cs" />
