--- a/GE.WebUI/Web.Release.config
+++ b/GE.WebUI/Web.Release.config
@@ -15,7 +15,9 @@
     </connectionStrings>
   -->
   <system.web>
+    <trace enabled="false" xdt:Transform="Insert"/>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
+    <httpRuntime enableVersionHeader="false" xdt:Transform="Replace"/>
     <!--
       In the example below, the "Replace" transform will replace the entire 
       <customErrors> section of your web.config file.
@@ -28,4 +30,14 @@
       </customErrors>
     -->
   </system.web>
+  <system.webServer>
+    <httpProtocol xdt:Transform="Insert">
+      <customHeaders>
+        <remove name="Server"/>
+        <remove name="X-Powered-By"/>
+        <remove name="X-AspNet-Version"/>
+        <remove name="X-AspNetMvc-Version"/>
+      </customHeaders>
+    </httpProtocol>
+  </system.webServer>
 </configuration>
