--- a/GE.WebUI/Web.config
+++ b/GE.WebUI/Web.config
@@ -30,6 +30,7 @@
       <remove statusCode="404"/>
       <error statusCode="404" responseMode="ExecuteURL" path="/error/notfound"/>
     </httpErrors>
+    <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
