--- a/GE.WebUI/Web.config
+++ b/GE.WebUI/Web.config
@@ -28,7 +28,9 @@
     </staticContent>
     <httpErrors errorMode="Custom" existingResponse="Replace">
       <remove statusCode="404"/>
+      <remove statusCode="500"/>
       <error statusCode="404" responseMode="ExecuteURL" path="/error/notfound"/>
+      <error statusCode="500" responseMode="ExecuteURL" path="/error/servererror"/>
     </httpErrors>
     <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
