--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -178,8 +178,6 @@
     <Content Include="bower_components\font-awesome\css\font-awesome.min.css" />
     <Content Include="bower_components\font-awesome\fonts\fontawesome-webfont.svg" />
     <Content Include="bower_components\font-awesome\HELP-US-OUT.txt" />
-    <Content Include="bower_components\jquery-hoverIntent\jquery.hoverIntent.html" />
-    <Content Include="bower_components\jquery-hoverIntent\jquery.hoverIntent.js" />
     <Content Include="bower_components\jquery\AUTHORS.txt" />
     <Content Include="bower_components\jquery\dist\jquery.js" />
     <Content Include="bower_components\jquery\dist\jquery.min.js" />
@@ -465,9 +463,6 @@
     <Content Include="Content\less\list-news.less" />
     <Content Include="Content\less\material.less" />
     <Content Include="Content\less\article.less" />
-    <Content Include="bower_components\jquery-hoverIntent\.bower.json" />
-    <Content Include="bower_components\jquery-hoverIntent\bower.json" />
-    <Content Include="bower_components\jquery-hoverIntent\README.md" />
     <Content Include="Content\less\error-page.less" />
     <None Include="Properties\PublishProfiles\game-exe.pubxml" />
     <None Include="Properties\PublishProfiles\RELESE.pubxml" />
@@ -512,6 +507,7 @@
     <Compile Include="ErrorController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
+    <Compile Include="Extantions\Controllers\BaseControllerExt.cs" />
     <Compile Include="Extantions\Repositories\RepoNews.cs" />
     <Compile Include="Extantions\Repositories\RepoArticle.cs" />
     <Compile Include="GamesController.generated.cs">
