--- a/GE.WebUI/Web.config
+++ b/GE.WebUI/Web.config
@@ -19,7 +19,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" />
+    <compilation debug="true" targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" />
     <customErrors mode="Off" />
   </system.web>
   <system.webServer>
