--- a/GE.WebUI/Web.config
+++ b/GE.WebUI/Web.config
@@ -27,12 +27,12 @@
     <staticContent>
       <mimeMap fileExtension=".woff2" mimeType="application/font-woff" />
     </staticContent>
-    <httpErrors errorMode="Custom" existingResponse="Replace">
+    <!--<httpErrors errorMode="Custom" existingResponse="Replace">
       <remove statusCode="404" />
       <remove statusCode="500" />
       <error statusCode="404" responseMode="ExecuteURL" path="/error/notfound" />
       <error statusCode="500" responseMode="ExecuteURL" path="/error/servererror" />
-    </httpErrors>
+    </httpErrors>-->
     <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
   <runtime>
