--- a/GE.WebUI/Web.Release.config
+++ b/GE.WebUI/Web.Release.config
@@ -39,5 +39,11 @@
         <remove name="X-AspNetMvc-Version"/>
       </customHeaders>
     </httpProtocol>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="404" />
+      <remove statusCode="500" />
+      <error statusCode="404" responseMode="ExecuteURL" path="/error/notfound" />
+      <error statusCode="500" responseMode="ExecuteURL" path="/error/servererror" />
+    </httpErrors>
   </system.webServer>
 </configuration>
